branches/wip/Archive/5a2ed4213852f767093b5458774d369b-41215fa5668b0384e580f21cc5e8e2fe/output
+ clang++ -S -std=c++11 -O2 main.cpp -o -
main.cpp:11:8: error: forward declaration of struct cannot have a nested name specifier
struct A::B::X;
       ^~~~~~
1 error generated.
